leaflet map z-index corrected

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -50,3 +50,26 @@ h2 {
         transition-delay: 0ms;
     }
 }
+
+//to correct leaflet map z-index
+
+.leaflet-pane {
+    z-index: auto;
+}
+.leaflet-control {
+    z-index: auto;
+}
+.leaflet-top,
+.leaflet-bottom {
+    z-index: auto;
+}
+.leaflet-pane {
+    z-index: auto;
+}
+.leaflet-control {
+    z-index: auto;
+}
+.leaflet-top,
+.leaflet-bottom {
+    z-index: auto;
+}
