--- a/src/index.scss
+++ b/src/index.scss
@@ -2,24 +2,3 @@
 @import './scss/normalize';
 @import './scss/variables';
 
-
-.leaflet-pane {
-  z-index: auto;
-}
-.leaflet-control {
-  z-index: auto;
-}
-.leaflet-top,
-.leaflet-bottom {
-  z-index: auto;
-}
-.leaflet-pane {
-  z-index: auto;
-}
-.leaflet-control {
-  z-index: auto;
-}
-.leaflet-top,
-.leaflet-bottom {
-  z-index: auto;
-}
